[package]
name = "prism-serde"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true

# serde
base64.workspace = true
serde.workspace = true
hex.workspace = true

# binary
bincode.workspace = true
