[package]
name = "prism-sp1"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
prism-common = { workspace = true }
sp1-zkvm = { workspace = true }
ed25519-consensus = { workspace = true }
curve25519-dalek = { workspace = true }
secp256k1 = { workspace = true }
