[package]
name = "prism-storage"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
serde = { workspace = true }
dirs = { workspace = true }
redis = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
jmt = { workspace = true }
prism-errors = { workspace = true }
prism-common = { workspace = true }
prism-serde = { workspace = true }
auto_impl = { workspace = true }
rocksdb = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
