[package]
name = "prism-storage"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
readme.workspace = true

[features]
default = []
rocksdb = ["dep:rocksdb"]

[dependencies]
serde = { workspace = true }
sled = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
jmt = { workspace = true }
mockall = { workspace = true }
prism-errors = { workspace = true }
prism-da = { workspace = true }
prism-common = { workspace = true }
prism-presets = { workspace = true }
prism-serde = { workspace = true }
auto_impl = { workspace = true }
rocksdb = { version = "0.21.0", features = [
  "multi-threaded-cf",
], optional = true }

[dev-dependencies]
paste = { workspace = true }
tempfile.workspace = true
tokio = { workspace = true, default-features = false, features = [
  "macros",
  "rt",
] }

[lints]
workspace = true
