[package]
name = "prism-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
lazy_static = "1.4.0"
parking_lot = "0.12"

tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["std"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "registry", "std", "fmt"] }
