[package]
name = "prism-telemetry-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
prism-telemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
lazy_static = { workspace = true }
