[package]
name = "prism-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true


[features]
default = []
groth16 = []
test_utils = []
mock_prover = []

[dependencies]
log = { workspace = true }
pretty_env_logger = { workspace = true }
anyhow = { workspace = true }
jmt = { workspace = true }
keystore-rs = { workspace = true }
prism-common = { workspace = true, features = ["test_utils"] }
prism-storage = { workspace = true }
prism-errors = { workspace = true }
prism-prover = { workspace = true, features = ["mock_prover"] }
prism-lightclient = { workspace = true }
prism-da = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }

[[test]]
name = "integration_tests"
path = "src/lib.rs"
harness = true
