[package]
name = "prism-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true


[features]
default = []
groth16 = []
test_utils = []
mock_prover = []

[dependencies]
tracing.workspace = true
pretty_env_logger.workspace = true
anyhow.workspace = true
prism-common = { workspace = true, features = ["test_utils"] }
prism-storage.workspace = true
prism-prover = { workspace = true, features = ["mock_prover"] }
prism-keys = { workspace = true }
prism-lightclient = { workspace = true, features = ["mock_prover"] }
prism-da.workspace = true
rand.workspace = true
tokio.workspace = true
tempfile.workspace = true
