[package]
name = "prism-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true


[features]
default = []
test_utils = []

[dependencies]
log.workspace = true
pretty_env_logger.workspace = true
anyhow.workspace = true
prism-common = { workspace = true, features = ["test_utils"] }
prism-storage.workspace = true
prism-events = { workspace = true }
prism-prover = { workspace = true }
prism-keys = { workspace = true }
prism-lightclient = { workspace = true }
celestia-rpc = { workspace = true }
tokio-util = { workspace = true }
prism-da.workspace = true
rand.workspace = true
tokio.workspace = true
tempfile.workspace = true
