[package]
name = "prism-tree"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
# prism
prism-api.workspace = true
prism-common = { workspace = true, features = ["test_utils"] }
prism-errors.workspace = true
prism-keys.workspace = true

# tree-impl
jmt.workspace = true
sha2.workspace = true

# serde
prism-serde.workspace = true
serde.workspace = true

# misc
anyhow.workspace = true
log.workspace = true

[dev-dependencies]
paste = { workspace = true }

[features]
default = []
