[package]
name = "prism-lightclient"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
groth16 = []
test_utils = []
mock_prover = []

[dependencies]
log = { workspace = true }
anyhow = { workspace = true }
prism-da = { workspace = true }
sp1-verifier = { workspace = true }
prism-errors = { workspace = true }
prism-keys = { workspace = true }
prism-common = { workspace = true, features = ["test_utils"] }
serde = { workspace = true }
web-time = { workspace = true, features = ["serde"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["sync"] }
wasm-bindgen-futures = { workspace = true }
