[package]
name = "prism-lightclient"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["telemetry"]
telemetry = ["prism-telemetry-registry"]
test_utils = []

[dependencies]
async-trait = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
prism-da = { workspace = true }
sp1-verifier = { workspace = true }
prism-errors = { workspace = true }
prism-keys = { workspace = true }
prism-events = { workspace = true }
prism-common = { workspace = true, features = ["test_utils"] }
prism-presets = { workspace = true }
prism-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
web-time = { workspace = true, features = ["serde"] }
lumina-node = { workspace = true }
prism-telemetry-registry = { workspace = true, optional = true }
tokio-util = { workspace = true }
dirs = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["sync"] }
wasm-bindgen-futures = { workspace = true }

[dev-dependencies]
pretty_env_logger = { workspace = true }
log = { workspace = true }
