[package]
name = "prism-lightclient"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["telemetry"]
telemetry = ["dep:prism-telemetry-registry"]
test_utils = []

[dependencies]
tracing = { workspace = true }
anyhow = { workspace = true }
prism-da = { workspace = true }
sp1-verifier = { workspace = true }
prism-errors = { workspace = true }
prism-keys = { workspace = true }
prism-events = { workspace = true }
prism-common = { workspace = true, features = ["test_utils"] }
prism-cross-target = { workspace = true, features = ["tasks"] }
prism-presets = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prism-telemetry-registry = { workspace = true, optional = true }
tokio-util = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }
dirs = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
pretty_env_logger = { workspace = true }
log = { workspace = true }

[lints]
workspace = true
