[package]
name = "prism-prover"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
groth16 = []
test_utils = []
mock_prover = []

[dependencies]
axum = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
jmt = { workspace = true }
prism-common = { workspace = true, features = ["test_utils"] }
prism-storage = { workspace = true }
prism-tree = { workspace = true }
prism-errors = { workspace = true }
prism-keys = { workspace = true }
prism-da = { workspace = true }
sp1-sdk = { workspace = true }
