[package]
name = "prism-prover"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
test_utils = []

[dependencies]
async-trait.workspace = true
axum = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
utoipa-axum = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
jmt = { workspace = true }
prism-common = { workspace = true, features = ["test_utils"] }
prism-storage = { workspace = true }
prism-tree = { workspace = true }
prism-errors = { workspace = true }
prism-events = { workspace = true }
prism-keys = { workspace = true }
prism-da = { workspace = true }
prism-presets = { workspace = true }
sp1-sdk = { workspace = true }
prism-telemetry-registry = { workspace = true }
mockall = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
paste = { workspace = true }
pretty_env_logger = { workspace = true }
log = { workspace = true }
