[package]
name = "prism-uniffi-lightclient"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "./src/bin/uniffi-bindgen.rs"

[dependencies]
thiserror = { workspace = true }
prism-lightclient = { path = "../lightclient", default-features = false }
prism-da = { workspace = true }
prism-events = { workspace = true }
prism-presets = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true }
uniffi = { workspace = true }
