[package]
name = "prism-wasm-lightclient"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libp2p = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
sp1-verifier = { workspace = true }
celestia-rpc = { workspace = true, features = ["wasm-bindgen"] }
prism-errors = { workspace = true }
prism-lightclient = { workspace = true }
prism-da = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
lumina-node-wasm = { workspace = true }
web-sys = { workspace = true, features = [
    "BroadcastChannel",
    "console",
    "MessageChannel",
    "MessageEvent",
    "MessagePort",
    "Worker",
] }
serde = { workspace = true}
serde-wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
